Finalize deposit-centric stock management
